My custom configuration.

--- a/platformio.ini
+++ b/platformio.ini
@@ -94,9 +94,9 @@ upload_speed = 921600
 ;    -DARDUINO_USB_MODE=1
 ;    -DARDUINO_USB_CDC_ON_BOOT=1
 
-;[env:esp32c3]
-;platform = espressif32 @ 6.1.0
-;build_flags =
-;  ${env.build_flags}
-;  -DESP32C3
-;board = lolin_c3_mini
+[env:esp32c3]
+platform = espressif32 @ 6.1.0
+build_flags =
+ ${env.build_flags}
+ -DESP32C3
+board = esp32-c3-devkitm-1
