--- a/platformio.ini
+++ b/platformio.ini
@@ -99,4 +99,6 @@ platform = espressif32 @ 6.1.0
 build_flags =
  ${env.build_flags}
  -DESP32C3
+ -DUSE_ESPNOW
+ -DCORE_DEBUG_LEVEL=5
 board = esp32-c3-devkitm-1
